Fixed copyright character missalignement, added articles to missing people

--- a/InterpolSystem.Web/wwwroot/css/site.css
+++ b/InterpolSystem.Web/wwwroot/css/site.css
@@ -126,3 +126,6 @@ body {
         display: none;
     }
 }
+.body-missing, .body-wanted{
+    margin-right:30px;
+}
